--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
     executor: node_executor
     steps:
       - node_bootstrap
-      - run: yarn test
+      - run: yarn test:ci
 
 workflows:
   version: 2
