--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "private": false,
   "scripts": {
     "dev": "nodemon .",
+    "dev:api": "nodemon src/api/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "echo No tests"
+    "test": "jest --watchAll",
+    "test:ci": "jest"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
@@ -39,7 +41,8 @@
     "jest": "^24.9.0",
     "nodemon": "^1.19.3",
     "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1"
+    "pretty-quick": "^1.11.1",
+    "rosie": "^2.0.1"
   },
   "husky": {
     "hooks": {
@@ -48,8 +51,13 @@
   },
   "dependencies": {
     "date-fns": "^2.4.1",
+    "http-errors": "^1.7.3",
     "i18next": "^17.2.0",
     "keymirror": "^0.1.1",
+    "koa": "^2.10.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^7.4.0",
     "telegraf": "^3.32.0",
     "telegraf-session-redis": "^5.1.0",
     "validator": "^11.1.0"
