--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "nodemon": "^1.19.3",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "rosie": "^2.0.1"
+    "rosie": "^2.0.1",
+    "supertest": "^4.0.2"
   },
   "husky": {
     "hooks": {
@@ -50,6 +51,7 @@
     }
   },
   "dependencies": {
+    "bull": "^3.11.0",
     "date-fns": "^2.4.1",
     "http-errors": "^1.7.3",
     "i18next": "^17.2.0",
