--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "license": "AGPL-3.0-or-later",
   "private": false,
   "scripts": {
-    "dev": "nodemon .",
-    "dev:api": "nodemon src/api/index.js",
+    "dev": "nodemon src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "test": "jest --watchAll",
@@ -42,7 +41,8 @@
     "nodemon": "^1.19.3",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
-    "rosie": "^2.0.1"
+    "rosie": "^2.0.1",
+    "supertest": "^4.0.2"
   },
   "husky": {
     "hooks": {
@@ -50,6 +50,7 @@
     }
   },
   "dependencies": {
+    "bull": "^3.11.0",
     "date-fns": "^2.4.1",
     "http-errors": "^1.7.3",
     "i18next": "^17.2.0",
