--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "Manage subscriptions and receive notifications from Notify Watcher via Telegram",
   "main": "index.js",
-  "repository": "git@github.com:notify-watcher/telegram-bot.git",
+  "repository": "https://github.com/notify-watcher/telegram-bot.git",
+  "license": "AGPL-3.0-or-later",
+  "private": false,
   "author": {
     "name": "Sebastián Salata",
     "email": "sa.salatart@gmail.com",
@@ -20,29 +22,15 @@
       "email": "franciscosandoval15@gmail.com"
     }
   ],
-  "license": "AGPL-3.0-or-later",
-  "private": false,
   "scripts": {
     "dev": "nodemon src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "prerelease": "/scripts/prerelease.sh",
+    "release": "standard-version",
+    "postrelease": "git push --follow-tags && gh-release",
     "test": "jest --watchAll",
     "test:ci": "jest"
-  },
-  "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.17.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "husky": "^3.0.8",
-    "jest": "^24.9.0",
-    "nodemon": "^1.19.3",
-    "prettier": "^1.18.2",
-    "pretty-quick": "^1.11.1",
-    "rosie": "^2.0.1",
-    "supertest": "^4.0.2"
   },
   "husky": {
     "hooks": {
@@ -62,5 +50,22 @@
     "telegraf": "^3.32.0",
     "telegraf-session-redis": "^5.1.0",
     "validator": "^11.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "gh-pages": "^2.1.1",
+    "husky": "^3.0.8",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.3",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
+    "rosie": "^2.0.1",
+    "standard-version": "^7.0.0",
+    "supertest": "^4.0.2"
   }
 }
