--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "gh-pages": "^2.1.1",
+    "gh-release": "^3.5.0",
     "husky": "^3.0.8",
     "jest": "^24.9.0",
     "nodemon": "^1.19.3",
