--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bull": "^3.11.0",
     "date-fns": "^2.4.1",
     "http-errors": "^1.7.3",
