chore(ci): publish docker image on commit in master (#27)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-node-cache-key: &node-cache-key node-v1-{{ checksum "package.json" }}
+node-cache-key: &node-cache-key node-v2-{{ checksum "package.json" }}
 node-docker-image: &node-docker-image circleci/node:12.11
 
 version: 2.1
@@ -16,7 +16,13 @@ commands:
       - restore_cache:
           keys:
             - *node-cache-key
-            - node-v1-
+            - node-v2-
+  login_github_package_registry:
+    description: Adds token for accessing github package registry
+    steps:
+      - run:
+          name: Login to github package registry
+          command: . .circleci/login_github_package_registry.sh
 
 jobs:
   bootstrap:
@@ -24,10 +30,8 @@ jobs:
     executor: node_executor
     steps:
       - node_bootstrap
-      - run:
-          name: Login to github package registry
-          command: . .circleci/login_github_package_registry.sh
-      - run: yarn install
+      - login_github_package_registry
+      - run: npm install
       - save_cache:
           key: *node-cache-key
           paths:
@@ -38,14 +42,26 @@ jobs:
     executor: node_executor
     steps:
       - node_bootstrap
-      - run: yarn lint
+      - run: npm run lint
 
   test:
     description: Run tests
     executor: node_executor
     steps:
       - node_bootstrap
-      - run: yarn test:ci
+      - run: npm run test:ci
+
+  build_push:
+    description: Build docker image and push it
+    executor: node_executor
+    steps:
+      - checkout
+      - login_github_package_registry
+      - setup_remote_docker:
+          version: 18.09.3
+      - run: npm run docker:build
+      - run: echo "$DOCKER_TOKEN" | docker login docker.pkg.github.com -u "$DOCKER_USERNAME" --password-stdin
+      - run: npm run docker:push
 
 workflows:
   version: 2
@@ -58,3 +74,11 @@ workflows:
       - test:
           requires:
             - bootstrap
+      - build_push:
+          requires:
+            - lint
+            - test
+          filters:
+            branches:
+              only:
+                - master
