--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
   ],
   "plugins": ["prettier", "jest"],
   "rules": {
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "import/no-extraneous-dependencies": [
       "error",
       { "devDependencies": ["**/*.test.js", "src/tests/**/*.js"] }
