--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,12 +17,12 @@ commands:
           keys:
             - *node-cache-key
             - node-v2-
-  login_github_package_registry:
-    description: Adds token for accessing github package registry
+  npm_login:
+    description: Adds token for accessing github package registry with npm
     steps:
       - run:
-          name: Login to github package registry
-          command: . .circleci/login_github_package_registry.sh
+          name: Login to github package registry with npm
+          command: . .circleci/npm_login.sh
 
 jobs:
   bootstrap:
@@ -30,7 +30,7 @@ jobs:
     executor: node_executor
     steps:
       - node_bootstrap
-      - login_github_package_registry
+      - npm_login
       - run: npm install
       - save_cache:
           key: *node-cache-key
@@ -56,7 +56,7 @@ jobs:
     executor: node_executor
     steps:
       - checkout
-      - login_github_package_registry
+      - npm_login
       - setup_remote_docker:
           version: 18.09.3
       - run: npm run docker:build
