--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "docker:run": "npm run docker:build && docker-compose up",
     "lint:fix": "eslint --fix .",
     "lint": "eslint .",
-    "postrelease": "git push --follow-tags && gh-release -y",
-    "prerelease": "scripts/prerelease.sh",
     "release": "standard-version",
+    "postrelease": "git push --follow-tags",
     "start": "node src/index.js",
     "test:ci": "jest",
     "test": "jest --watchAll"
@@ -64,7 +63,6 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "gh-release": "^3.5.0",
     "husky": "^3.0.8",
     "jest": "^24.9.0",
     "nodemon": "^1.19.3",
