chore: update negebauer email

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "contributors": [
     {
       "name": "Nicolás Gebauer",
-      "email": "negebauerm@gmail.com",
+      "email": "hello@negebauer.com",
       "url": "https://negebauer.com"
     },
     {
