chore: dont use accent marks in author and contributors

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "license": "AGPL-3.0-or-later",
   "private": false,
   "author": {
-    "name": "Sebastián Salata",
+    "name": "Sebastian Salata",
     "email": "sa.salatart@gmail.com",
     "url": "https://salatart.com"
   },
   "contributors": [
     {
-      "name": "Nicolás Gebauer",
+      "name": "Nicolas Gebauer",
       "email": "hello@negebauer.com",
       "url": "https://negebauer.com"
     },
